--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
   <body>
     <header>
       <div class="navbar row">
-        <button class="menu-button">
+        <button class="menu-button icon-button">
           <i class="fa-solid fa-bars"></i>
         </button>
         <div class="logo-wrapper">
           <img
             src="https://fontmeme.com/permalink/241004/6e99ef9578d90391496b5f4b4459f196.png" />
         </div>
+      </div>
+      <div class="menu row dir-column">
+        <button class="close-menu icon-button">
+          <i class="fa-solid fa-angle-left"></i>
+        </button>
+        <div class="tabs"></div>
       </div>
     </header>
     <main></main>
