menu is created using list of views #1

--- a/index.html
+++ b/index.html
@@ -24,14 +24,7 @@
         <button class="close-menu icon-button">
           <i class="fa-solid fa-angle-left"></i>
         </button>
-        <div class="tabs">
-          <div class="tab">
-            <h2>Home</h2>
-          </div>
-          <div class="tab">
-            <h2>Study Sets</h2>
-          </div>
-        </div>
+        <div class="tabs"></div>
       </div>
     </header>
     <main></main>
