open menu button opens the menu #1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div class="navbar row">
-        <button class="menu-button icon-button">
+        <button class="open-menu icon-button">
           <i class="fa-solid fa-bars"></i>
         </button>
         <div class="logo-wrapper">
