when tab in menu is clicked the view is swapped to that view and the menu is closed #1

--- a/index.html
+++ b/index.html
@@ -20,14 +20,36 @@
             src="https://fontmeme.com/permalink/241004/6e99ef9578d90391496b5f4b4459f196.png" />
         </div>
       </div>
-      <div class="menu row dir-column">
+      <div class="menu row dir-column hidden">
         <button class="close-menu icon-button">
           <i class="fa-solid fa-angle-left"></i>
         </button>
         <div class="tabs"></div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="view" data-view="home">
+        <h1>Home</h1>
+      </div>
+      <div class="view hidden" data-view="study sets">
+        <h1>study sets</h1>
+      </div>
+      <div class="view hidden" data-view="flashcards">
+        <h1>flashcards</h1>
+      </div>
+      <div class="view hidden" data-view="quiz">
+        <h1>Quiz</h1>
+      </div>
+      <div class="view hidden" data-view="match">
+        <h1>match</h1>
+      </div>
+      <div class="view hidden" data-view="memory">
+        <h1>memory</h1>
+      </div>
+      <div class="view hidden" data-view="asteroids">
+        <h1>Asteroids</h1>
+      </div>
+    </main>
     <script
       src="https://kit.fontawesome.com/8330c2924c.js"
       crossorigin="anonymous"></script>
