the current view of the user is stored in localstorage and when the page is loaded it loads that view #1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <div class="navbar row">
+      <div class="navbar row align-center">
         <button class="open-menu icon-button">
           <i class="fa-solid fa-bars"></i>
         </button>
@@ -32,7 +32,10 @@
         <h1>Home</h1>
       </div>
       <div class="view hidden" data-view="study sets">
-        <h1>study sets</h1>
+        <div class="row">
+          <h2>Make a new set</h2>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
       </div>
       <div class="view hidden" data-view="flashcards">
         <h1>flashcards</h1>
