--- a/index.html
+++ b/index.html
@@ -39,17 +39,23 @@
       <div class="view hidden" data-view="study sets">
         <div class="row align-center justify-right bg-light-gray">
           <h2>Make a new set</h2>
-          <button class="icon-button">
+          <button id="new-set" class="icon-button">
             <i class="fa-solid fa-arrow-right"></i>
           </button>
         </div>
         <div class="row bg-light-gray section-head">
           <h2>Your sets</h2>
         </div>
-        <div id="no-sets" class="row text-center bg-light-gray to-bottom">
-          <h3>
-            It appear you don't have any sets, you can make your first one above
-          </h3>
+        <div
+          id="sets-holder"
+          class="row dir-column bg-light-gray to-bottom"></div>
+      </div>
+      <div class="view hidden" data-view="specific set">
+        <div class="row align-center bg-light-gray">
+          <button id="to-sets" class="icon-button all-sets">
+            <i class="fa-solid fa-arrow-left"></i>
+          </button>
+          <h3 class="gray-text">All sets</h3>
         </div>
       </div>
       <div class="view hidden" data-view="flashcards">
