can successfully render front side of card #1

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           </button>
           <h3 class="gray-text">All sets</h3>
         </div>
+        <div id="viewing-set" class="row dir-column"></div>
       </div>
       <div class="view hidden" data-view="flashcards">
         <h1>flashcards</h1>
