pokeball card html and css figured out #1

--- a/index.html
+++ b/index.html
@@ -57,8 +57,19 @@
           </button>
           <h3 class="gray-text">All sets</h3>
         </div>
-        <div id="viewing-set" class="row dir-column"></div>
+        <div id="viewing-set" class="row dir-column">
+          <div class="card pokeball">
+            <div class="red-half"></div>
+            <div class="mid-section">
+              <div class="mid-stripe"></div>
+              <div class="center-circle"></div>
+              <div class="mid-stripe"></div>
+            </div>
+            <div class="white-half"></div>
+          </div>
+        </div>
       </div>
+      <div class="view hidden" data-view="specific-card"></div>
       <div class="view hidden" data-view="flashcards">
         <h1>flashcards</h1>
       </div>
