back bar at top of screen is rendered by typescript now #1

--- a/index.html
+++ b/index.html
@@ -50,15 +50,8 @@
           id="sets-holder"
           class="row dir-column bg-light-gray to-bottom"></div>
       </div>
-      <div class="view hidden" data-view="specific set">
-        <div class="row align-center bg-light-gray">
-          <button id="to-sets" class="icon-button all-sets">
-            <i class="fa-solid fa-arrow-left"></i>
-          </button>
-          <h3 class="gray-text">All sets</h3>
-        </div>
-        <div id="viewing-set" class="row dir-column">
-          <div class="card pokeball">
+      <div id="viewing-set" class="view hidden" data-view="specific-set">
+        <!-- <div class="card pokeball">
             <div class="red-half"></div>
             <div class="mid-section">
               <div class="mid-stripe"></div>
@@ -66,8 +59,7 @@
               <div class="mid-stripe"></div>
             </div>
             <div class="white-half"></div>
-          </div>
-        </div>
+          </div> -->
       </div>
       <div class="view hidden" data-view="specific-card"></div>
       <div class="view hidden" data-view="flashcards">
