flavor text is retrieved for the pokemon when it selected to be edited #1

--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
         <button class="close-menu icon-button">
           <i class="fa-solid fa-angle-left"></i>
         </button>
-        <div class="tabs"></div>
+        <div class="tabs">
+          <div class="tab" data-view="home"><h2>Home</h2></div>
+          <div class="tab" data-view="study sets"><h2>Study Sets</h2></div>
+          <div class="tab" data-view="flashcards"><h2>Flashcards</h2></div>
+          <div class="tab" data-view="quiz"><h2>Quiz</h2></div>
+          <div class="tab" data-view="match"><h2>Match</h2></div>
+          <div class="tab" data-view="memory"><h2>Memory</h2></div>
+          <div class="tab" data-view="asteroids"><h2>Asteroids</h2></div>
+        </div>
       </div>
     </header>
     <main>
